--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,13 +2,10 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.163.1/containers/typescript-node
 {
   "name": "Node.js & TypeScript",
-  "build": {
-    "dockerfile": "Dockerfile",
-    // Update 'VARIANT' to pick a Node version: 10, 12, 14
-    "args": {
-      "VARIANT": "14"
-    }
-  },
+  "dockerComposeFile": "../docker-compose.yml",
+  "service": "webapp",
+  "workspaceFolder": "/workspace",
+  "shutdownAction": "stopCompose",
 
   // Set *default* container specific settings.json values on container create.
   "settings": {
