--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write '{pages,styles,src,lib}/**/*.{js,jsx,ts,tsx,css}'",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "date-fns": "^2.11.1",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
 }
