--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "bulma": "^0.9.2",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "remark": "^12.0.0",
-    "remark-html": "^12.0.0"
+    "remark-html": "^12.0.0",
+    "sass": "^1.32.8"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
