--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@creativebulma/bulma-divider": "^1.1.0",
     "bulma": "^0.9.2",
     "bulmaswatch": "^0.8.1",
     "date-fns": "^2.11.1",
