--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format": "prettier --write '{pages,styles,src,lib}/**/*.{js,jsx,ts,tsx,css}'",
+    "format": "prettier --write '{pages,styles,src,lib}/**/*.{js,jsx,ts,tsx,css,json,scss}'",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
